--- a/AdaptiveEnglishTrainer/appsettings.json
+++ b/AdaptiveEnglishTrainer/appsettings.json
@@ -1,18 +1,19 @@
 {
-  "Logging": {
+    "Logging": {
     "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+        "Default": "Information",
+        "Microsoft.AspNetCore": "Warning"
     }
-  },
-  "AllowedHosts": "*",
-  "JWTSettings": {
+    },
+    "AllowedHosts": "*",
+    "JWTSettings": {
         "securityKey": "AdaptiveEnglishTrainerKey",
         "validIssuer": "AdaptiveEnglishTrainerAPI",
         "validAudience": "https://localhost:5011",
         "expiresIn": 600
-  },
-  "ConnectionStrings": {
-    "sqlConnection": "server=.; database=AdaptiveEnglishTrainer; Integrated Security=true"
-  }
+    },
+    "ConnectionStrings": {
+        "sqlConnection": "server=.; database=AdaptiveEnglishTrainer; Integrated Security=true",
+        "sqlConnection2": "server=DESKTOP-U96HR92\\MSSQLSERVER2; database=AdaptiveEnglishTrainer; Integrated Security=true"
+    }
 }
